--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Emmoji</title>
+    <style>
+      html, body {
+        display: block;
+        width:100% - 10px;
+        overflow: hidden;
+      }
+    </style>
   </head>
-  <body>
+  <body style="height: 50%">
   </body>
 </html>
