input text into textbox.

--- a/src/client/src/assets/domelements/chat.html
+++ b/src/client/src/assets/domelements/chat.html
@@ -6,8 +6,21 @@
             font-size: 8px;
             width: 200px;
             height: 10px;
+            margin: 0;
         }
+
+        .messages {
+            margin: 0;
+            width: 200px;
+            height: 200px;
+            background: rgba(255,255,255,0.5);
+            overflow-wrap: break-word;
+        }
+
     </style>
+    <div class="messages" id="messages">
+
+    </div>
     <div class="chat-send-message-container">
         <input class="message-box" type="text" id="message-box"/>
     </div>
